sass/layout/_about.scss
.about {
    padding: 4rem 2rem;
    &__title {
        text-align: center;
    }
    &__wrapper {
        display: flex;
    }
    .post {
        width: 33%;
        padding: 1rem;
        &__img {
            height: 300px;
            width: 100%;
            object-fit: cover;
        }
        &__title {
            color: $color-dark-green;
        }
        &__content {
            margin-bottom: 2rem;
        }
    }
}

@media only screen and(max-width: 800px) {
    .about {
        &__wrapper {
            flex-wrap: wrap;
        }
        .post {
            width: 50%;
            flex-grow: 1;
        }
    }
}

@media only screen and(max-width:600px) {
    .about {
        padding: 4rem 0;
        .post {
            padding: 2rem 0;
            width: 100%;
            & :not(.post__img .post__button) {
                padding: 1rem
            }
        }
    }
}

